Reproducible assembly builds without relative linking

XMLWordPrintable

    • b19
    • linux

        FIx JDK-8284437 resolved reproducible builds from different workspaces,
        but utilized relative path linking because assembly files embedded absolute
        file paths during the library linking.

        The embedded absolute assembly file path symbols is because the source
        .S assembly files do not specify a .file symbol location, which then means
        the linker embeds a symbol link to the absolute .object file.

        Usage of a .file <relative source location> in the .S source will result in a
        correct .file symbol.

              Assignee:
              Andrew Leonard
              Reporter:
              Andrew Leonard
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: