8284661: Reproducible assembly builds without relative linking

Signed-off-by: Andrew Leonard <anleonar@redhat.com>